# LiveMe

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
deploy/: README.md  deploy.sh  liveme-backend.service  liveme-frontend.service  liveme-mediamtx.service  nginx-http.conf  nginx.conf
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
frontend/src/app/admin/: page.tsx
frontend/src/components/: Comments.tsx  ContentView.tsx  Player.tsx  Reactions.tsx  ThemeToggle.tsx  icons.tsx
frontend/src/components/admin/: Broadcaster.tsx  Editor.tsx
frontend/src/lib/: events.ts  useLive.ts
media/: mediamtx.yml
media/scripts/: on-ready.sh
scripts/: dev.sh  e2e.sh
